wp-content/themes/betheme-child/style118.css
/*
Theme Name: Betheme Child
Theme URI: https://themes.muffingroup.com/betheme
Author: Muffin group
Author URI: https://muffingroup.com
Description: Child Theme for Betheme
Template: betheme
Version: 2.0.1
*/

:root {
  color-scheme: only light;
}

.mfn-main-slider.mfn-rev-slider {
  background: #002d6d;
}

.logo-wrapper > img {
  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
}

.title {
  font-weight: 600;
}

.protondb-wrapper .mcb-column-inner {
  margin-bottom: 0px;
}

.anticheat {
  background-color: #156897 !important;
}

.mcb-section-86dec4e7c {
  background-color: #1c1c1c!important;
}

.mcb-item-d69573929.column {
  margin-top: 15px;
  margin-bottom: 25px;
  width: 100% !important;
  text-align: center;
}

.mcb-item-d69573929 i {
  font-size: 24px;
  top: 3px;
  position: relative;
  margin-right: 15px;
}

.mcb-item-d69573929 .desc-wrapper {
  font-size: 16px;
}

.mcb-column-inner-j1cgwfhsd a.fork {
  width: 100% !important;
  display: block;
  margin-top: 25px;
  margin-bottom: 5px;
  font-size: 16px;
}

.apps-fade::after {
  background: radial-gradient(#1c1c1c 30%, rgba(0,0,0,0) 100%);
  top: 0;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  position: absolute;
}

.mfn-header-sticky-section {
  backdrop-filter: blur(10px);
  background-color: rgba(38,38,38,0.95);
  box-shadow: 0px 3px 8px rgba(0,0,0,0.25);
}

#mfn-header-template .button_label {
  white-space: nowrap !important;
}

.column_trailer_box:hover {
  z-index: 1;
}

.trailer_box .desc .subtitle, .trailer_box.plain .desc .line {
  background-color: rgba(0,0,0,0.4);
  backdrop-filter: blur(10px);
  background-image: none;
  font-weight: 600;
}

.trailer_box .title {
  color: #fff;
  font-size: 15px !important;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 10px;
  opacity: 0.75;
  font-style: italic;
}

.trailer_box .desc > .line {
  display: none !important;
  visibility: hidden !important;
}

.trailer_box:hover .desc .subtitle {
  bottom: inherit;
  font-size: 18px!important;
}

select:focus {
  color: #fff;
  background-color: #464646 !important;
}

#image-builder-result {
  margin-bottom: 5px;
  border-top: 2px solid #575757;
  padding-top: 50px;
}

.iso-selection,
.rebase {
  margin-bottom: 50px;
  float: left;
  width: 50%;
}

.video-container {
  width: 100%;
  float: left;
  padding: 20px;
  margin-bottom: 20px;
}

.video-container iframe {
  border-radius: 15px;
  background: #262626;
  display: inherit;
  width: 100%;
  aspect-ratio: 16 / 9;
  height: auto;
}

.changelog {
  font-size: 14px;
  line-height: 20px;
  overflow-y: scroll;
  width: 100%;
  background: #262626;
  border-radius: 15px;
  padding: 20px;
  text-align: left;
  float: left;
}

.changelog br {
  display: none;
  visibility: hidden;
}

.changelog pre {
  background: #000;
  border: none;
  padding: 5px;
  display: inline;
  font-family: 'Fira Code' !important;
  font-size: 11px;
  user-select: all;
  cursor: pointer;
  display: inline-block;
}

.changelog a {
  color: #c38fff !important;
}

.changelog.shown-fade {
  max-height: 700px;
}

.changelog > h1 {
  font-size: 48px;
  line-height: 48px;
}

.changelog > h2 {
  font-size: 32px;
  line-height: 32px;
  margin-top: 25px;
  margin-bottom: 25px;
}

.changelog > h3 {
  font-size: 24px;
  line-height: 24px;
  margin-top: 15px;
}

.fine-print {
  font-size: 16px;
  line-height: 22px;
  display: inline-block;
}

.fine-print a {
  font-weight: 800;
  text-decoration: underline;
}

.code {
  padding: 5px;
  background: #000;
  border-radius: 5px;
  font-family: 'Fira Code';
  font-size: 10px;
  line-height: 14px;
  user-select: all;
  cursor: pointer;
}

#hardware-description {
  font-size: 16px;
}

#hardware-description .explaination {
  font-size: 20px;
}

#hardware-description h3 > a > i {
  font-size: 20px;
  top: -5px;
  position: relative;
  display: inline-block;
}

.command-header {
  width: 100%;
  float: left;
  margin-bottom: 5px;
}

.command {
  background: #000;
  border-radius: 5px;
  padding: 10px;
  font-size: 10px;
  line-height:25px;
  font-family: 'Fira Code';
  user-select: all;
  cursor: pointer;
  display: inline-block;
  text-align: left;
}

.command-nobg {
  font-family: 'Fira Code';
  font-size: 12px;
  font-style: normal;
  color: #fff;
  font-weight: 400;
}

.code:hover,
.command:hover {
  background-color: #444;
}

#image-builder .download-logo {
  text-align: center;
  max-width: 300px;
}

#image-builder > div {
  transition: opacity 0.20s ease-in-out, transform 0.35s ease-in-out, max-height 0.15s ease-in-out;
}

a:not(.button) {
  font-weight: 600;
}

.button-download-container {
  margin: 20px 0px;
}

.button-download,
.button-torrent {
  background-image: linear-gradient(100deg, rgb(5, 70, 173) 0%, rgb(138, 43, 226) 100%);
  background-color: rgb(5, 70, 173)!important;
  overflow: visible;
  margin-right: 0px!important;
  transform-style: preserve-3d;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.01);
  transition: background-color 0.1s ease-in-out;
}

.button-download:hover,
.button-torrent:hover {
  background-image: none;
  background-color:#000!important;
}

.button-download > .button_label,
.button-torrent > .button_label {
  line-height: 18px;
}

.button-download > .button_label,
.button-download > .button_icon,
.button-torrent > .button_label,
.button-torrent > .button_icon {
  color: #fff;
}

.glow-effect::after {
  position: absolute;
  content: "";
  top: 10px;
  left: 0;
  right: 0;
  z-index: -1;
  height: 100%;
  width: 100%;
  transform: scale(0.9) translateZ(-1px);
  filter: blur(10px);
  background: linear-gradient(100deg, rgb(5, 70, 173) 0%, rgb(138, 43, 226) 50%, rgb(5, 70, 173) 100%);
  background-size: 200% 200%;
  -webkit-animation: animateGlow 2s linear infinite;
          animation: animateGlow 2s linear infinite;
  opacity: 0.5;
}

@-webkit-keyframes animateGlow {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 200% 50%;
  }
}
/* ... */

